# pact-workshop-message

.github/workflows/: test.yml
consumer-dotnet-kafka/src/: provider.csproj
consumer-dotnet-kafka/tests/: tests.csproj
consumer-go-kafka/: go.mod  go.sum  setup_rdkafka.ps1
consumer-java-kafka/: build.gradle
consumer-java-kafka/src/main/java/io/pactflow/example/kafka/: KafkaConfiguration.java
consumer-java-kafka/src/test/java/io/pactflow/example/kafka/: ProductsPactTest.java  ProductsPactTestV4.java
consumer-js-kafka/: package-lock.json  package.json
consumer-js-kafka/src/product/: product.handler.js  product.handler.pact.test.js
consumer-python-kafka/: pyproject.toml  run.py
consumer-python-kafka/src/_kafka/: product.py
consumer-python-kafka/src/product/: product_repository.py  product_service.py
consumer-python-kafka/tests/unit/: product_service_pact_test.py
consumer-rust-kafka/: Cargo.toml
consumer-rust-kafka-sync/: Cargo.toml
consumer-rust-kafka-sync/src/: main.rs
provider-dotnet-kafka/src/: provider.csproj
provider-dotnet-kafka/tests/: tests.csproj
provider-go-kafka/: go.mod  go.sum
provider-java-kafka/: build.gradle
provider-java-kafka/src/test/java/io/pactflow/example/kafka/: ProductsKafkaProducerTest.java
provider-js-kafka/: package-lock.json  package.json
provider-python-kafka/: pyproject.toml
provider-python-kafka/tests/: message_product_pact_test.py
provider-rust-kafka/: Cargo.toml
provider-rust-kafka-sync/: Cargo.toml
provider-rust-kafka-sync/src/: main.rs
provider-rust-kafka/src/: main.rs
