[package]
name = "provider-rust-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
tokio = { version = "1.4.0", features=["rt-multi-thread","macros"] }
actix-web = "4.9.0"
serde = "1.0.210"
serde_json = "1.0.129"
uuid = { version ="1.11.0", features=["v4"] }
rdkafka = { version ="~0.39.0"}
[target.'cfg(windows)'.dependencies]
rdkafka = { version ="~0.39.0", features=["cmake-build"] }

[dev-dependencies]
pact_verifier = "1.2.4"
expectest = "0.12.0"
maplit = "1.0.2"
pact_models = { version = "~1.3.0", default-features = false }
async-trait = "0.1.80"
anyhow = "1.0.82"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json"] }
base64 = "0.22.1"